--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,7 @@ steps:
     command: 'publish'
     projects: '**/*.csproj'
     publishWebProjects: false
+    modifyOutputPath: true
     arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
     zipAfterPublish: true
 
