--- a/templates/build.yml
+++ b/templates/build.yml
@@ -15,5 +15,5 @@ steps:
     command: 'publish'
     projects: '**/*.csproj'
     publishWebProjects: false
-    arguments: '--no-build --configuration ${{ parameters.buildConfiguration }} --output "$(Build.ArtifactStagingDirectory)"//${{ parameters.buildConfiguration }}'
+    arguments: '--no-build --configuration ${{ parameters.buildConfiguration }} --output "$(Build.ArtifactStagingDirectory)"//${{ parameters.buildConfiguration }}//Tailspin.SpaceGame.Web.zip'
     zipAfterPublish: true
