--- a/templates/build.yml
+++ b/templates/build.yml
@@ -10,7 +10,7 @@ steps:
     projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
-  displayName: 'Publish the project - ${{ parameters.buildConfiguration }}'
+  displayName: 'Publish the project - $(Build.ArtifactStagingDirectory)'
   inputs:
     command: 'publish'
     projects: '**/*.csproj'
