--- a/templates/build.yml
+++ b/templates/build.yml
@@ -10,10 +10,10 @@ steps:
     projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
-  displayName: 'Publish the project - $(Build.ArtifactStagingDirectory)"\Debug\Tailspin.SpaceGame.Web.zip"'
+  displayName: 'Publish the project - $(Build.ArtifactStagingDirectory)\${{ parameters.buildConfiguration }}\Tailspin.SpaceGame.Web.zip'
   inputs:
     command: 'publish'
     projects: '**/*.csproj'
     publishWebProjects: false
-    arguments: '--no-build --configuration ${{ parameters.buildConfiguration }} --output $(Build.ArtifactStagingDirectory)"\Debug\Tailspin.SpaceGame.Web.zip"'
+    arguments: '--no-build --configuration ${{ parameters.buildConfiguration }} --output $(Build.ArtifactStagingDirectory)\${{ parameters.buildConfiguration }}\Tailspin.SpaceGame.Web.zip'
     zipAfterPublish: true
