--- a/templates/build.yml
+++ b/templates/build.yml
@@ -15,5 +15,5 @@ steps:
     command: 'publish'
     projects: '**/*.csproj'
     publishWebProjects: false
-    arguments: '--no-build --configuration ${{ parameters.buildConfiguration }} --output $(Build.ArtifactStagingDirectory)\Debug\Tailspin.SpaceGame.Web.zip'
+    arguments: '--no-build --configuration ${{ parameters.buildConfiguration }} --output $(Build.ArtifactStagingDirectory)/Debug/*.zip'
     zipAfterPublish: true
