--- a/templates/build.yml
+++ b/templates/build.yml
@@ -16,5 +16,5 @@ steps:
     command: 'publish'
     projects: '**/*.csproj'
     publishWebProjects: false
-    arguments: '--no-build --configuration ${{ parameters.buildConfiguration }} --output $(pathToPublish)/Debug/Tailspin.SpaceGame.Web.zip'
+    arguments: '--no-build --configuration ${{ parameters.buildConfiguration }} --output /Debug/Tailspin.SpaceGame.Web.zip'
     zipAfterPublish: true
